--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   "devDependencies": {
     "@types/node": "^17.0.23",
     "@types/react": "^17.0.42",
+    "autoprefixer": "^10.4.4",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
+    "post": "^0.0.1",
     "tailwindcss": "^3.0.23",
     "typescript": "^4.6.2"
   }
